# easy-union-find

./: CHANGELOG.md  LICENSE  README.md  easy-union-find.cabal
src/: UnionFind.hs
test/: Main.hs
