cabal-version:      2.4
name:               easy-union-find
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             overshiki
maintainer:         le.niu@hotmail.com

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

library
    exposed-modules:  UnionFind

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite easy-union-find-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test src
    other-modules:    UnionFind
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0
